fixed and abstracted feature.js
trying to add rmagick - its messed up.

--- a/app/assets/stylesheets/features.css
+++ b/app/assets/stylesheets/features.css
@@ -145,8 +145,14 @@
   color: black;
 }
 
-.title-photo{
+.top-photo{
   display: block;
+  margin: auto;
+  padding-bottom: 10px;
+}
+
+.top-photo-form {
+  padding-top: 10px;
   margin: auto;
 }
 
